<resources>
    <string name="app_name">Healthopedia</string>
    <string name="edit_userid">Enter your User ID</string>
    <string name="edit_password">Enter your Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Register</string>
    <string name="login_form">Login Form</string>
    <string name="sample_code"> </string>
    <string name="btn_back">Back</string>
    <string name="signup_form">Signup Form</string>
    <string name="edit_user_name">Enter User Name</string>
    <string name="edit_user_email">Enter your Email Address</string>
    <string name="edit_confirm_password">Confirm your Password</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_up">update</string>
    <string name="btn_bmical">bmi calculator</string>
    <string name="btn_food">food diary</string>
    <string name="btn_fitness">fitness diary</string>
    <string name="btn_alarm">alarms</string>
    <string name="channelId">android</string>

</resources>