<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".first">

    <Button
        android:id="@+id/btn_bmical"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:text="@string/btn_bmical"
        app:backgroundTint="#56A3B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="225dp"
        android:src="@drawable/first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_alarm"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:onClick="OnClickAlarmBut"
        android:text="@string/btn_alarm"
        app:backgroundTint="#56A3B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fitness" />

    <Button
        android:id="@+id/btn_fitness"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:text="@string/btn_fitness"
        app:backgroundTint="#56A3B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_food" />

    <Button
        android:id="@+id/btn_food"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:text="@string/btn_food"
        app:backgroundTint="#56A3B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bmical" />

</androidx.constraintlayout.widget.ConstraintLayout>