<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Forms.HomeActivity">

    <TextView
        android:id="@+id/txtUserID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Test"
        android:layout_marginTop="40dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/cardview_shadow_start_color"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editUserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/edit_userid"
            android:inputType="textPersonName"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_user_name"
            android:inputType="textPersonName"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>


        <EditText
            android:id="@+id/editUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_user_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/editUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:text="@string/btn_update"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/cardview_shadow_start_color"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editUser_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter User ID again to Delete"
            android:inputType="textPersonName"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:backgroundTint="#F40A0A"
            android:text="@string/btn_delete"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#2196F3"
            android:onClick="OnClick1"
            android:text="@string/btn_menu" />

    </LinearLayout>

</LinearLayout>