<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_head"
            android:layout_marginTop="23dp"
            android:text="Please enter your details to Register"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_UID"
            android:layout_below="@id/textView_register_head"
            android:text="User ID*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/editUserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_userid"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_UID"
            android:background="@drawable/border"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_UserName"
            android:layout_below="@id/editUserID"
            android:text="User Name*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUserName"
            android:hint="@string/edit_user_name"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_UserName"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_email"
            android:layout_below="@id/editUserName"
            android:text="Email*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUserEmail"
            android:hint="@string/edit_user_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_email"
            android:background="@drawable/border"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_password"
            android:layout_below="@id/editUserEmail"
            android:text="Password*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPassword"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_password"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_confirm_password"
            android:layout_below="@id/editPassword"
            android:text="Confirm Password*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editCPassword"
            android:hint="@string/edit_confirm_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_confirm_password"
            android:background="@drawable/border"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signup"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/editCPassword"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/btn_back"
            android:textColor="@color/black"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_below="@+id/btnSignup"/>


    </RelativeLayout>

</ScrollView>