<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_logo"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:maxWidth="180dp"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/textView_main_head"
            android:text="Welcome to Healthopedia"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_below="@id/imageView_logo"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_login_UID"
            android:layout_below="@id/textView_main_head"
            android:text="User ID*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="50dp"/>


        <EditText
            android:id="@+id/editUserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_login_UID"
            android:hint="@string/edit_userid"
            android:padding="6dp"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_login_pwd"
            android:layout_below="@id/textView_login_UID"
            android:text="Password*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password"
            android:layout_below="@id/textView_login_pwd"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textSize="16sp"
            android:background="@drawable/border"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_marginTop="75dp"
            android:text="@string/btn_login"
            android:textSize="15sp"
            android:layout_below="@id/editPassword"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signup"
            android:textSize="15sp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_below="@id/btnLogin"/>

    </RelativeLayout>



</ScrollView>